--- a/createEvent.html
+++ b/createEvent.html
@@ -137,7 +137,8 @@
 
         var request = gapi.client.calendar.events.insert({
           'calendarId': 'primary',
-          'resource': event
+          'resource': event,
+          'sendNotifications': true
         });
 
         request.execute(function (event) {
