--- a/createEvent.html
+++ b/createEvent.html
@@ -124,6 +124,7 @@
           ],
           'attendees': [
             { 'email': 'earth888g@gmail.com' },
+            { 'email': 'nicky3734@yandex.com' },
             { 'email': 'nicky3734g@gmail.com' }
           ],
           'reminders': {
